# fake_hisepy

./: LICENSE  README.md  build_conda_package.sh  environment.yml  pyproject.toml  setup.py  tox.ini  upload_conda_package.sh  yp.putes
conda/: meta.yaml
conda_build/: channeldata.json  index.html
conda_build/noarch/: current_repodata.json  fake_hisepy-0.1.0-py_0.tar.bz2  fake_hisepy-0.1.1-py_0.tar.bz2  index.html  repodata.json.bz2  repodata_from_packages.json  repodata_from_packages.json.bz2
conda_build/osx-arm64/: index.html
conda_dist/: channeldata.json  index.html
conda_dist/noarch/: index.html
conda_dist/osx-arm64/: index.html
conda_recipe/: build.sh  meta.yaml  old_meta.yaml
fake_hisepy/: meta.yaml
src/: __main__.py
src/fake_hisepy/: __main__.py  config.yaml
src/fake_hisepy/auth/: auth.py
src/fake_hisepy/config/: config.py  config.toml
src/fake_hisepy/data_apps/: abstraction.py
src/fake_hisepy/format/: format.py
src/fake_hisepy/ide/: ide.py
src/fake_hisepy/lookup/: lookup.py
src/fake_hisepy/read/: read.py
src/fake_hisepy/schedule/: schedule.py
src/fake_hisepy/storage/: private_folders.py  project_folder.py  project_store.py
src/fake_hisepy/upload/: upload.py
src/fake_hisepy/utils/: utils.py
tests/: fix_toast_abstractions.py  test_abstractions.py  test_cli.py  test_fake_hisepy.py
